--- a/package.json
+++ b/package.json
@@ -2,13 +2,10 @@
   "name": "zohan-services",
   "version": "0.0.1",
   "description": "",
-  "engines": {
-    "node": "12.x.x"
-  },
   "main": "app.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
+    "start": "node build/app.js",
+    "dev": "ts-node src/app.ts",
     "build": "tsc -p ."
   },
   "author": "",
@@ -19,16 +16,49 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.27"
+    "koa": "^2.13.1",
+    "koa-joi-router": "^8.0.0",
+    "koa-router": "^10.0.0",
+    "mongoose": "^5.9.27",
+    "nconf": "^0.11.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/cors": "^2.8.9",
     "@types/express": "^4.17.7",
+    "@types/koa": "^2.13.4",
+    "@types/koa-joi-router": "^8.0.1",
     "@types/mongoose": "^5.7.34",
+    "@types/nconf": "^0.10.1",
     "@types/node": "^14.0.27",
+    "@typescript-eslint/eslint-plugin": "^4.29.3",
+    "@typescript-eslint/parser": "^4.29.3",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-filenames": "^1.3.2",
+    "eslint-plugin-prettier": "^3.4.1",
+    "git-cz": "3.0.1",
+    "husky": "4",
+    "lint-staged": "^11.1.2",
     "nodemon": "^2.0.6",
+    "prettier": "^2.3.2",
     "ts-node": "^8.10.2",
-    "typescript": "^3.9.7"
+    "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "src/**/*.{ts}": [
+      "eslint . --fix",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/git-cz"
+    }
   }
 }
