--- a/package.json
+++ b/package.json
@@ -5,34 +5,40 @@
   "main": "app.js",
   "scripts": {
     "start": "node build/app.js",
-    "dev": "ts-node src/app.ts",
-    "build": "tsc -p .",
+    "dev": "ts-node -r tsconfig-paths/register src/app.ts",
+    "build": "tsc --p ./tsconfig.json",
     "lint:check": "eslint --ext .ts src",
     "lint:fix": "eslint --fix --ext .ts src"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.0",
+    "@koa/cors": "^3.1.0",
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.1",
+    "koa-bodyparser": "^4.3.0",
     "koa-joi-router": "^8.0.0",
+    "koa-jwt": "^4.0.1",
     "koa-router": "^10.0.0",
     "mongoose": "^5.9.27",
     "nconf": "^0.11.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
-    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/koa": "^2.13.4",
+    "@types/koa-bodyparser": "^4.3.3",
     "@types/koa-joi-router": "^8.0.1",
+    "@types/koa-logger": "^3.1.1",
+    "@types/koa__cors": "^3.0.3",
     "@types/mongoose": "^5.7.34",
     "@types/nconf": "^0.10.1",
-    "@types/node": "^14.0.27",
+    "@types/node": "^16.7.10",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
     "eslint": "^7.32.0",
@@ -41,10 +47,12 @@
     "eslint-plugin-prettier": "^3.4.1",
     "git-cz": "3.0.1",
     "husky": "4",
+    "koa-logger": "^3.2.1",
     "lint-staged": "^11.1.2",
     "nodemon": "^2.0.6",
     "prettier": "^2.3.2",
     "ts-node": "^8.10.2",
+    "tsconfig-paths": "^3.11.0",
     "typescript": "^4.3.5"
   },
   "lint-staged": {
