fix: 🐛 tsconfig noEmit for GA deployment

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,7 @@
   "typescript.tsdk": "node_modules/typescript/lib",
   "cSpell.ignorePaths": [
     ".gcloudignore"
-  ]
+  ],
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
