--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -14,3 +14,13 @@ jobs:
         run: yarn lint:check
       - name: Build check
         run: yarn build
+  deploy-production-services:
+    name: GAE Deploy 🚀
+    needs: check-and-build
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      - uses: google-github-actions/deploy-appengine@main
+        with:
+          credentials: ${{ secrets.gcp_credentials }}
