--- a/app.yaml
+++ b/app.yaml
@@ -1,1 +1,10 @@
 runtime: nodejs12
+
+env_variables:
+  APP_ENV: production
+  MONGO_URL: 'mongodb://zohan_app_engine:5ltjuNvuVU4HFRRI@zohan-shard-00-00.7jeef.mongodb.net:27017,zohan-shard-00-01.7jeef.mongodb.net:27017,zohan-shard-00-02.7jeef.mongodb.net:27017/zohan?ssl=true&replicaSet=atlas-qf7arn-shard-0&authSource=admin&retryWrites=true&w=majority'
+  ACCESS_TOKEN_SECRET: '6b7ed16ab0131207b609a2b25f0ff2e3'
+  REFRESH_TOKEN_SECRET: '7d7fe7692bcbd28a4601abc10e181633'
+  ACCESS_TOKEN_EXPIRATION_DURATION: '15m'
+  REFRESH_EXPIRATION_DURATION: '180d'
+
