--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -20,7 +20,11 @@ jobs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
     steps:
-      - uses: actions/checkout@v2
-      - uses: google-github-actions/deploy-appengine@main
+      - id: 'checkout'
+        uses: actions/checkout@v2
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v0'
         with:
-          credentials: ${{ secrets.gcp_credentials }}
+          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+      - id: 'deploy'
+        uses: google-github-actions/setup-gcloud@v0
