--- a/.github/workflows/check-and-build.yaml
+++ b/.github/workflows/check-and-build.yaml
@@ -26,5 +26,12 @@ jobs:
         uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-      - id: 'deploy'
-        uses: google-github-actions/setup-gcloud@v0
+      - uses: google-github-actions/setup-gcloud@v0
+      - name: Set glcoud project
+        run: gcloud config set project ${{ secrets.GCP_PROJECT }}
+      # secrets
+      - name: Replace secrets in yaml deploy config file
+        run: .github/scripts/replace-secrets.sh app.yaml
+      # deploy service (promotes by default)
+      - name: Deploy service
+        run: gcloud app deploy -q app.yaml
