--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "baseUrl": "./src",
     "paths": {
       "@config/*": ["./config/*"],
+      "@models": ["./models"],
       "@models/*": ["./models/*"],
       "@models": ["./models"],
       "@utils/*": ["./utils/*"],
