feat: 🎸 add RUIAN cadastral data processing
Add a tool (script) to process and seed the database with cadastral
data.

✅ Closes: #15

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,8 @@
     ".gcloudignore"
   ],
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "esbenp.prettier-vscode"
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "cSpell.words": [
+    "momc"
+  ]
 }
