feat: 🎸 add address suggestion endpoint
✅ Closes: #25

--- a/.env_example
+++ b/.env_example
@@ -1,11 +1,15 @@
+# App
+APP_ENV=development
 PORT=4000
-MONGO_URL=mongodb://localhost/zohan
 
-ACCESS_TOKEN_SECRET=<your secret>
-REFRESH_TOKEN_SECRET=<your secret>
+# Token secrets
+ACCESS_TOKEN_SECRET=access_token_secret
+REFRESH_TOKEN_SECRET=refresh_token_secret
 
-# expressed in seconds or a string describing a time span [zeit/ms](https://github.com/zeit/ms.js).  Eg: 60, "2 days", "10h", "7d"
+# Token expiration
+# Eg: 60 (seconds), "2 days", "10h", "7d"
 ACCESS_TOKEN_EXPIRATION_DURATION=15m
 REFRESH_EXPIRATION_DURATION=180d
 
-APP_ENV=development
+# MongoDB
+MONGO_URL=mongodb://localhost/zohan
