--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "description": "",
   "main": "app.js",
+  "engines" : { 
+    "node" : ">=14.0.0 <17.0.0"
+  },
   "scripts": {
     "start": "node -r tsconfig-paths/register -r ts-node/register/transpile-only build/app.js",
     "dev": "nodemon -r tsconfig-paths/register src/app.ts --watch",
