--- a/app.yaml
+++ b/app.yaml
@@ -6,5 +6,4 @@ env_variables:
   ACCESS_TOKEN_SECRET: {secret:ACCESS_TOKEN_SECRET}
   REFRESH_TOKEN_SECRET: {secret:REFRESH_TOKEN_SECRET}
   ACCESS_TOKEN_EXPIRATION_DURATION: '15m'
-  REFRESH_EXPIRATION_DURATION: '180d'
-
+  REFRESH_EXPIRATION_DURATION: '180d
