--- a/package.json
+++ b/package.json
@@ -18,51 +18,51 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@koa/cors": "^3.1.0",
-    "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
-    "body-parser": "^1.19.0",
-    "dotenv": "^10.0.0",
-    "express": "^4.17.1",
-    "fast-xml-parser": "^4.0.9",
-    "jsonwebtoken": "^8.5.1",
-    "jszip": "^3.10.0",
-    "koa": "^2.13.1",
-    "koa-bodyparser": "^4.3.0",
+    "@koa/cors": "3.1.0",
+    "axios": "0.27.2",
+    "bcrypt": "5.0.1",
+    "body-parser": "1.19.0",
+    "dotenv": "10.0.0",
+    "express": "4.17.1",
+    "fast-xml-parser": "4.0.9",
+    "jsonwebtoken": "8.5.1",
+    "jszip": "3.10.0",
+    "koa": "^2.13.4",
+    "koa-bodyparser": "4.3.0",
     "koa-joi-router": "^8.0.0",
-    "koa-router": "^10.0.0",
-    "mongodb": "^4.9.0",
-    "mongoose": "^6.5.2",
-    "nconf": "^0.11.3",
-    "ts-node": "^8.10.2",
-    "tsconfig-paths": "^3.11.0"
+    "koa-router": "10.0.0",
+    "mongodb": "4.9.0",
+    "mongoose": "6.5.2",
+    "nconf": "0.11.3",
+    "ts-node": "8.10.2",
+    "tsconfig-paths": "3.11.0"
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "@types/bcrypt": "^3.0.0",
-    "@types/express": "^4.17.7",
-    "@types/jsonwebtoken": "^8.5.5",
-    "@types/jszip": "^3.4.1",
+    "@types/axios": "0.14.0",
+    "@types/bcrypt": "3.0.0",
+    "@types/express": "4.17.7",
+    "@types/jsonwebtoken": "8.5.5",
+    "@types/jszip": "3.4.1",
     "@types/koa": "^2.13.4",
-    "@types/koa-bodyparser": "^4.3.3",
-    "@types/koa-joi-router": "^8.0.1",
-    "@types/koa-logger": "^3.1.1",
-    "@types/koa__cors": "^3.0.3",
-    "@types/mongoose": "^5.11.97",
-    "@types/nconf": "^0.10.1",
-    "@types/node": "^16.7.10",
-    "@typescript-eslint/eslint-plugin": "^4.29.3",
-    "@typescript-eslint/parser": "^4.29.3",
-    "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-filenames": "^1.3.2",
-    "eslint-plugin-prettier": "^3.4.1",
+    "@types/koa-bodyparser": "4.3.3",
+    "@types/koa-joi-router": "^8.0.0",
+    "@types/koa-logger": "3.1.1",
+    "@types/koa__cors": "3.0.3",
+    "@types/mongoose": "5.11.97",
+    "@types/nconf": "0.10.1",
+    "@types/node": "16.7.10",
+    "@typescript-eslint/eslint-plugin": "4.29.3",
+    "@typescript-eslint/parser": "4.29.3",
+    "eslint": "7.32.0",
+    "eslint-config-prettier": "8.3.0",
+    "eslint-plugin-filenames": "1.3.2",
+    "eslint-plugin-prettier": "3.4.1",
     "git-cz": "3.0.1",
     "husky": "4",
-    "lint-staged": "^11.1.2",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.3.2",
-    "typescript": "^4.3.5"
+    "lint-staged": "11.1.2",
+    "nodemon": "2.0.6",
+    "prettier": "2.3.2",
+    "typescript": "4.3.5"
   },
   "lint-staged": {
     "src/**/*.{ts}": [
