--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build": "tsc --p tsconfig.json",
     "start:seed-ruian-data": "node -r tsconfig-paths/register -r ts-node/register/transpile-only build/scripts/seed-cadastral-data/index.js",
     "lint:check": "eslint --ext .ts src",
-    "lint:fix": "eslint --fix --ext .ts src"
+    "lint:fix": "eslint --fix --ext .ts src",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
@@ -42,6 +43,7 @@
     "@types/axios": "0.14.0",
     "@types/bcrypt": "3.0.0",
     "@types/express": "4.17.7",
+    "@types/jest": "^29.2.5",
     "@types/jsonwebtoken": "8.5.5",
     "@types/jszip": "3.4.1",
     "@types/koa": "^2.13.4",
@@ -60,9 +62,11 @@
     "eslint-plugin-prettier": "3.4.1",
     "git-cz": "3.0.1",
     "husky": "4",
+    "jest": "^29.3.1",
     "lint-staged": "11.1.2",
     "nodemon": "2.0.6",
     "prettier": "2.3.2",
+    "ts-jest": "^29.0.3",
     "typescript": "4.3.5"
   },
   "lint-staged": {
