--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-filenames": "1.3.2",
     "eslint-plugin-prettier": "3.4.1",
+    "eslint-plugin-security": "1.7.1",
     "git-cz": "3.0.1",
     "husky": "4",
     "jest": "^29.3.1",
