feat: 🎸 split token secrets for frontend and admin

--- a/.env_example
+++ b/.env_example
@@ -11,5 +11,15 @@ REFRESH_TOKEN_SECRET=refresh_token_secret
 ACCESS_TOKEN_EXPIRATION_DURATION=15m
 REFRESH_EXPIRATION_DURATION=180d
 
+# Admin - token secrets
+ACCESS_TOKEN_SECRET=admin_access_token_secret
+REFRESH_TOKEN_SECRET=admin_refresh_token_secret
+
+# Admin - token expiration
+# Eg: 60 (seconds), "2 days", "10h", "7d"
+ACCESS_TOKEN_EXPIRATION_DURATION=15d
+REFRESH_EXPIRATION_DURATION=180d
+
+
 # MongoDB
 MONGO_URL=mongodb://localhost/zohan
