--- a/app.yaml
+++ b/app.yaml
@@ -7,6 +7,10 @@ env_variables:
   REFRESH_TOKEN_SECRET: {secret:REFRESH_TOKEN_SECRET}
   ACCESS_TOKEN_EXPIRATION_DURATION: '15m'
   REFRESH_EXPIRATION_DURATION: '180d'
+  ADMIN_ACCESS_TOKEN_SECRET: {secret:ADMIN_ACCESS_TOKEN_SECRET}
+  ADMIN_REFRESH_TOKEN_SECRET: {secret:ADMIN_REFRESH_TOKEN_SECRET}
+  ADMIN_ACCESS_TOKEN_EXPIRATION_DURATION: '15m'
+  ADMIN_REFRESH_EXPIRATION_DURATION: '180d'
 
 automatic_scaling:
   target_cpu_utilization: 0.8
