feat: 🎸 implement user email verification

--- a/.env_example
+++ b/.env_example
@@ -1,15 +1,18 @@
 # App
 APP_ENV=development
 PORT=4000
+APP_URL=http://localhost:4000
 
 # Token secrets
 ACCESS_TOKEN_SECRET=access_token_secret
 REFRESH_TOKEN_SECRET=refresh_token_secret
+RESET_TOKEN_SECRET=reset_token_secret
 
 # Token expiration
 # Eg: 60 (seconds), "2 days", "10h", "7d"
 ACCESS_TOKEN_EXPIRATION_DURATION=15m
 REFRESH_EXPIRATION_DURATION=180d
+RESET_EXPIRATION_DURATION=7d
 
 # Admin - token secrets
 ACCESS_TOKEN_SECRET=admin_access_token_secret
@@ -23,3 +26,7 @@ REFRESH_EXPIRATION_DURATION=180d
 
 # MongoDB
 MONGO_URL=mongodb://localhost/zohan
+
+# Mailer
+GMAIL_EMAIL=your_email
+GMAIL_APP_PASSWORD=your_password
