--- a/app.yaml
+++ b/app.yaml
@@ -3,10 +3,13 @@ runtime: nodejs16
 env_variables:
   APP_ENV: production
   MONGO_URL: {secret:MONGO_URL}
+  APP_URL: {secret:APP_URL}
   ACCESS_TOKEN_SECRET: {secret:ACCESS_TOKEN_SECRET}
   REFRESH_TOKEN_SECRET: {secret:REFRESH_TOKEN_SECRET}
+  RESET_TOKEN_SECRET: {secret:RESET_TOKEN_SECRET}
   ACCESS_TOKEN_EXPIRATION_DURATION: '15m'
   REFRESH_EXPIRATION_DURATION: '180d'
+  RESET_EXPIRATION_DURATION: '7d'
   ADMIN_ACCESS_TOKEN_SECRET: {secret:ADMIN_ACCESS_TOKEN_SECRET}
   ADMIN_REFRESH_TOKEN_SECRET: {secret:ADMIN_REFRESH_TOKEN_SECRET}
   ADMIN_ACCESS_TOKEN_EXPIRATION_DURATION: '15m'
