--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongodb": "4.9.0",
     "mongoose": "6.4.6",
     "nconf": "0.11.3",
+    "nodemailer": "6.9.7",
     "ts-node": "8.10.2",
     "tsconfig-paths": "3.11.0"
   },
@@ -57,6 +58,7 @@
     "@types/koa__cors": "3.0.3",
     "@types/nconf": "0.10.1",
     "@types/node": "16.7.10",
+    "@types/nodemailer": "6.4.14",
     "@typescript-eslint/eslint-plugin": "4.29.3",
     "@typescript-eslint/parser": "4.29.3",
     "eslint": "7.32.0",
