--- a/.env_example
+++ b/.env_example
@@ -14,6 +14,9 @@ ACCESS_TOKEN_EXPIRATION_DURATION=15m
 REFRESH_EXPIRATION_DURATION=180d
 RESET_EXPIRATION_DURATION=7d
 
+# Timezone
+TIMEZONE=Europe/Prague
+
 # Admin - token secrets
 ACCESS_TOKEN_SECRET=admin_access_token_secret
 REFRESH_TOKEN_SECRET=admin_refresh_token_secret
