--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bcrypt": "5.0.1",
     "body-parser": "1.19.0",
     "date-fns": "2.29.3",
+    "date-fns-tz": "3.1.3",
     "dotenv": "10.0.0",
     "express": "4.17.1",
     "fast-xml-parser": "4.0.9",
